kubernetes/step03_ingress/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: app2-ns
spec:
  selector:
    app: app1
  ports:
    - name: http
      protocol: TCP
      port: 80
