kubernetes/step03_ingress/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: app2-ns
spec:
  selector:
    app: app2
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
