kubernetes/step03_ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  namespace: app2-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1  
    ingress.kubernetes.io/ssl-redirect: "false"    
spec:
  rules:
  - host: "app1.simpledoers.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app1
            port:
              number: 80
  - host: "app2.simpledoers.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app2
            port:
              number: 80
  defaultBackend:
    service:
      name: app2
      port:
        number: 80
